--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -2,9 +2,9 @@ name: Pylint
 
 on:
   push:
-    branches: [main]
+    branches: [test]
   pull_request:
-    branches: [main]
+    branches: [test]
 
 jobs:
   build:
